<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".QuizActivity">

    <ImageView
        android:id="@+id/imageQuiz"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/kidsquiz"/>


    <Button
        android:id="@+id/option1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_option_one"
        android:textColor="@color/black"
        android:backgroundTint="@color/answer_options_button_background"/>

    <Button
        android:id="@+id/option2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_option_two"
        android:textColor="@color/black"
        android:backgroundTint="@color/answer_options_button_background"/>

    <Button
        android:id="@+id/option3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_option_three"
        android:textColor="@color/black"
        android:backgroundTint="@color/answer_options_button_background"/>

    <Button
        android:id="@+id/option4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_option_four"
        android:textColor="@color/black"
        android:backgroundTint="@color/answer_options_button_background"/>

</LinearLayout>