<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/select_category_background"
    tools:context=".CategorySelectionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_category"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/select_category_heading_text"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="25dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/card_view_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingEnd="50dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/animalslogo"
                android:contentDescription="@string/select_category_animals"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_category_animals"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <Button
            android:id="@+id/animalsPlayButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/select_category_play_button"
            android:backgroundTint="@color/play_button_background"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="25dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/card_view_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingEnd="50dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/birdslogo"
                    android:contentDescription="@string/select_category_birds"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_category_birds"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <Button
                android:id="@+id/birdsPlayButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/select_category_play_button"
                android:backgroundTint="@color/play_button_background"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="200dp"
    app:cardElevation="15dp"
    app:cardCornerRadius="25dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/card_view_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingEnd="50dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fruitslogo"
                android:contentDescription="@string/select_category_fruits"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_category_fruits"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <Button
            android:id="@+id/fruitsPlayButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/select_category_play_button"
            android:backgroundTint="@color/play_button_background"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="200dp"
    app:cardElevation="15dp"
    app:cardCornerRadius="25dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/card_view_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingEnd="50dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vegetableslogo"
                android:contentDescription="@string/select_category_vegetables"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_category_vegetables"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <Button
            android:id="@+id/vegetablesPlayButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/select_category_play_button"
            android:backgroundTint="@color/play_button_background"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
